z-index fix

--- a/wotStatsUi/src/App.css
+++ b/wotStatsUi/src/App.css
@@ -28,6 +28,10 @@
   padding: 2px;
 }
 
+.App-menugroup-right > div {
+  z-index: 0;
+}
+
 .App-menugroup-header {
   font-size: 90%;
 }
